--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 <body>
     <form class="box" action="index.html" method="POST">
         <h1>Login</h1>
-        <input type="text" name="" placeholder="Username">
-        <input type="password" name="" placeholder="Password">
-        <input type="submit" name="" placeholder="Login">
+        <input type="text" name="" placeholder="Username" required>
+        <input type="password" name="" placeholder="Password" required>
+        <input type="submit" name="" placeholder="Login" onclick="funcao1()">
     </form>
+    <script>function funcao1(){
+        <form class="box2" action="index.html" method="POST">
+        <h1>Login</h1>
+        </form>
+    }</script>
 </body>
 </html>
