--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Animated login form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form class="box" action="index.html" method="POST">
         <h1>Login</h1>
         <input type="text" name="" placeholder="Username" required>
         <input type="password" name="" placeholder="Password" required>
-        <input type="submit" name="" placeholder="Login" onclick="funcao1()">
+        <input type="submit" name="" placeholder="Login" onclick=funcao1()>
     </form>
     <script>function funcao1(){
-        <form class="box2" action="index.html" method="POST">
         <h1>Login</h1>
-        </form>
     }</script>
 </body>
 </html>
