--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         <h1>Login</h1>
         <input type="text" name="" placeholder="Username" required>
         <input type="password" name="" placeholder="Password" required>
-        <input type="submit" name="" placeholder="Login" onclick=funcao1()>
+        <input type="submit" name="" placeholder="Login">
     </form>
-    <script>function funcao1(){
-        <h1>Login</h1>
-    }</script>
 </body>
 </html>
